@@ -3,28 +3,30 @@ write and report coverage data with 'figleaf'.
 
 """
 import py
-
-py.test.importorskip("figleaf.annotate_html")
-import figleaf
+py.test.importorskip("figleaf")
+import figleaf.annotate_html
 
 def pytest_addoption(parser):
     group = parser.getgroup('figleaf options')
-    group.addoption('-F', action='store_true', default=False,
+    group.addoption('--figleaf', action='store_true', default=False,
             dest = 'figleaf',
             help=('trace python coverage with figleaf and write HTML '
                  'for files below the current working dir'))
-    group.addoption('--figleaf-data', action='store', default='.figleaf',
-            dest='figleafdata',
-            help='path to coverage tracing file.')
-    group.addoption('--figleaf-html', action='store', default='html',
-            dest='figleafhtml', 
-            help='path to the coverage html dir.')
+    group.addoption('--fig-data', action='store', default='.figleaf',
+            dest='figleafdata', metavar="dir",
+            help='set tracing file, default: ".figleaf".')
+    group.addoption('--fig-html', action='store', default='html',
+            dest='figleafhtml', metavar="dir",
+            help='set html reporting dir, default "html").')
 
 def pytest_configure(config):
-    figleaf.start()
+    if config.getvalue("figleaf"):
+        figleaf.start()
 
 def pytest_terminal_summary(terminalreporter):
     config = terminalreporter.config
+    if not config.getvalue("figleaf"):
+        return
     datafile = py.path.local(config.getvalue('figleafdata'))
     tw = terminalreporter._tw
     tw.sep('-', 'figleaf')
